// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`article found 1`] = `
Object {
  "context": Object {
    "msgs": Array [
      Object {
        "id": "abc",
        "text": "計程車上有裝悠遊卡感應器，老人悠悠卡可以享受優惠部分由政府補助，不影響司機收入",
        "type": "text",
      },
    ],
    "sessionId": 1497994017447,
  },
  "replies": Array [
    Object {
      "text": "🔍 There are some messages that looks similar to \\"計程車上有裝悠遊卡感⋯⋯\\" you have sent to me.",
      "type": "text",
    },
    Object {
      "text": "Internet rumors are often mutated and shared.
Please choose the version that looks the most similar👇",
      "type": "text",
    },
    Object {
      "altText": "Please choose the most similar message from the list.",
      "contents": Object {
        "contents": Array [
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "color": "#ff7b7b",
                  "size": "sm",
                  "text": "(Words found in transcript)",
                  "type": "text",
                  "weight": "bold",
                },
                Object {
                  "contents": Array [
                    Object {
                      "color": "#ffb600",
                      "text": "計程車上有裝悠遊卡感應器",
                      "type": "span",
                      "weight": "bold",
                    },
                    Object {
                      "text": "，老人悠悠卡可以享受優惠部分由政府補助，不影響司機收入，下車時使用老人悠遊卡，跳錶車資105元，優惠32元，只扣73元，哈哈，這是屬於我們的福利，與大家分享，可以善加利用！=7折，朋友使用ok",
                      "type": "span",
                    },
                  ],
                  "flex": 0,
                  "gravity": "top",
                  "maxLines": 6,
                  "type": "text",
                  "weight": "regular",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "margin": "none",
              "spacing": "none",
              "type": "box",
            },
            "direction": "ltr",
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "data": "{\\"input\\":\\"AVvY-yizyCdS-nWhuYWx\\",\\"sessionId\\":1497994017447,\\"state\\":\\"CHOOSING_ARTICLE\\"}",
                    "displayText": "I choose “計程車上有裝悠遊卡感應器，老人悠悠卡可以享受...”",
                    "label": "Choose this one",
                    "type": "postback",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "horizontal",
              "type": "box",
            },
            "header": Object {
              "contents": Array [
                Object {
                  "flex": 0,
                  "text": "😀",
                  "type": "text",
                },
                Object {
                  "color": "#AAAAAA",
                  "gravity": "center",
                  "size": "sm",
                  "text": "Looks 52% similar",
                  "type": "text",
                  "weight": "bold",
                  "wrap": true,
                },
              ],
              "layout": "horizontal",
              "paddingBottom": "none",
              "spacing": "md",
              "type": "box",
            },
            "type": "bubble",
          },
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "flex": 0,
                  "gravity": "top",
                  "maxLines": 5,
                  "text": "None of these messages matches mine :(",
                  "type": "text",
                  "weight": "regular",
                  "wrap": true,
                },
              ],
              "layout": "horizontal",
              "margin": "none",
              "spacing": "none",
              "type": "box",
            },
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "data": "{\\"input\\":\\"__NO_ARTICLE_FOUND__\\",\\"sessionId\\":1497994017447,\\"state\\":\\"CHOOSING_ARTICLE\\"}",
                    "displayText": "None of these messages matches mine :(",
                    "label": "Tell us more",
                    "type": "postback",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "horizontal",
              "type": "box",
            },
            "header": Object {
              "contents": Array [
                Object {
                  "color": "#AAAAAA",
                  "margin": "none",
                  "size": "sm",
                  "text": "😶",
                  "type": "text",
                  "weight": "bold",
                },
              ],
              "layout": "horizontal",
              "paddingBottom": "none",
              "type": "box",
            },
            "type": "bubble",
          },
        ],
        "type": "carousel",
      },
      "type": "flex",
    },
  ],
}
`;

exports[`articles found with high similarity 1`] = `
Object {
  "context": Object {
    "msgs": Array [
      Object {
        "id": "abc",
        "text": "YouTube · 寻找健康人生",
        "type": "text",
      },
    ],
    "sessionId": 1497994017447,
  },
  "replies": Array [
    Object {
      "text": "🔍 There are some messages that looks similar to \\"YouTube · ⋯⋯\\" you have sent to me.",
      "type": "text",
    },
    Object {
      "text": "Internet rumors are often mutated and shared.
Please choose the version that looks the most similar👇",
      "type": "text",
    },
    Object {
      "altText": "Please choose the most similar message from the list.",
      "contents": Object {
        "contents": Array [
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "contents": Array [
                    Object {
                      "color": "#ffb600",
                      "text": "YouTube",
                      "type": "span",
                      "weight": "bold",
                    },
                    Object {
                      "text": "  ·  ",
                      "type": "span",
                    },
                    Object {
                      "color": "#ffb600",
                      "text": "寻找健康人生",
                      "type": "span",
                      "weight": "bold",
                    },
                  ],
                  "flex": 0,
                  "gravity": "top",
                  "maxLines": 6,
                  "type": "text",
                  "weight": "regular",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "margin": "none",
              "spacing": "none",
              "type": "box",
            },
            "direction": "ltr",
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "data": "{\\"input\\":\\"AVvY-yizyCdS-nWhuYWx\\",\\"sessionId\\":1497994017447,\\"state\\":\\"CHOOSING_ARTICLE\\"}",
                    "displayText": "I choose “YouTube  ·  寻找健康人生”",
                    "label": "Choose this one",
                    "type": "postback",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "horizontal",
              "type": "box",
            },
            "header": Object {
              "contents": Array [
                Object {
                  "flex": 0,
                  "text": "😄",
                  "type": "text",
                },
                Object {
                  "color": "#AAAAAA",
                  "gravity": "center",
                  "size": "sm",
                  "text": "Looks 100% similar",
                  "type": "text",
                  "weight": "bold",
                  "wrap": true,
                },
              ],
              "layout": "horizontal",
              "paddingBottom": "none",
              "spacing": "md",
              "type": "box",
            },
            "type": "bubble",
          },
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "contents": Array [
                    Object {
                      "color": "#ffb600",
                      "text": "YouTube",
                      "type": "span",
                      "weight": "bold",
                    },
                    Object {
                      "text": "
·
",
                      "type": "span",
                    },
                    Object {
                      "color": "#ffb600",
                      "text": "寻找健康人生",
                      "type": "span",
                      "weight": "bold",
                    },
                  ],
                  "flex": 0,
                  "gravity": "top",
                  "maxLines": 6,
                  "type": "text",
                  "weight": "regular",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "margin": "none",
              "spacing": "none",
              "type": "box",
            },
            "direction": "ltr",
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "data": "{\\"input\\":\\"AVvY-yizyCdS-nWhuYWy\\",\\"sessionId\\":1497994017447,\\"state\\":\\"CHOOSING_ARTICLE\\"}",
                    "displayText": "I choose “YouTube
·
寻找健康人生”",
                    "label": "Choose this one",
                    "type": "postback",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "horizontal",
              "type": "box",
            },
            "header": Object {
              "contents": Array [
                Object {
                  "flex": 0,
                  "text": "😄",
                  "type": "text",
                },
                Object {
                  "color": "#AAAAAA",
                  "gravity": "center",
                  "size": "sm",
                  "text": "Looks 100% similar",
                  "type": "text",
                  "weight": "bold",
                  "wrap": true,
                },
              ],
              "layout": "horizontal",
              "paddingBottom": "none",
              "spacing": "md",
              "type": "box",
            },
            "type": "bubble",
          },
        ],
        "type": "carousel",
      },
      "type": "flex",
    },
  ],
}
`;

exports[`input matches dialogflow intent search article when input length > 10 and intentDetectionConfidence != 1 1`] = `
Object {
  "context": Object {
    "msgs": Array [
      Object {
        "id": "abc",
        "text": "零一二三四五六七八九十",
        "type": "text",
      },
    ],
    "sessionId": 1497994017447,
  },
  "replies": Array [
    Object {
      "altText": "Unfortunately, I currently don’t recognize “零一二三四五六七八九十”, but I would still like to help.
May I ask you a quick question?",
      "contents": Object {
        "body": Object {
          "contents": Array [
            Object {
              "text": "Unfortunately, I currently don’t recognize “零一二三四五六七八九十”, but I would still like to help.
May I ask you a quick question?",
              "type": "text",
              "wrap": true,
            },
          ],
          "layout": "vertical",
          "type": "box",
        },
        "type": "bubble",
      },
      "type": "flex",
    },
    Object {
      "altText": "Did you forward this message as a whole to me from the LINE app?",
      "contents": Object {
        "body": Object {
          "contents": Array [
            Object {
              "text": "Did you forward this message as a whole to me from the LINE app?",
              "type": "text",
              "wrap": true,
            },
          ],
          "layout": "vertical",
          "type": "box",
        },
        "footer": Object {
          "contents": Array [
            Object {
              "action": Object {
                "data": "{\\"input\\":\\"__POSTBACK_YES__\\",\\"sessionId\\":1497994017447,\\"state\\":\\"ASKING_ARTICLE_SOURCE\\"}",
                "displayText": "Yes, I forwarded it as a whole",
                "label": "Yes, I forwarded it as a whole",
                "type": "postback",
              },
              "color": "#333333",
              "style": "primary",
              "type": "button",
            },
            Object {
              "action": Object {
                "data": "{\\"input\\":\\"__POSTBACK_NO__\\",\\"sessionId\\":1497994017447,\\"state\\":\\"ASKING_ARTICLE_SOURCE\\"}",
                "displayText": "No, typed it myself",
                "label": "No, typed it myself",
                "type": "postback",
              },
              "color": "#333333",
              "style": "primary",
              "type": "button",
            },
          ],
          "layout": "vertical",
          "spacing": "sm",
          "type": "box",
        },
        "styles": Object {
          "body": Object {
            "separator": true,
          },
        },
        "type": "bubble",
      },
      "type": "flex",
    },
  ],
}
`;

exports[`input matches dialogflow intent uses dialogflow response when input length < 10 1`] = `
Object {
  "context": Object {
    "msgs": Array [
      Object {
        "id": "abc",
        "text": "你好",
        "type": "text",
      },
    ],
    "sessionId": 1497994017447,
  },
  "replies": Array [
    Object {
      "text": "歡迎光臨",
      "type": "text",
    },
  ],
}
`;

exports[`input matches dialogflow intent uses dialogflow response when input length > 10 and intentDetectionConfidence = 1 1`] = `
Object {
  "context": Object {
    "msgs": Array [
      Object {
        "id": "abc",
        "text": "零一二三四五六七八九十",
        "type": "text",
      },
    ],
    "sessionId": 1497994017447,
  },
  "replies": Array [
    Object {
      "text": "歡迎光臨",
      "type": "text",
    },
  ],
}
`;

exports[`only one article found with high similarity and choose for user 1`] = `
Object {
  "context": Object {
    "msgs": Array [
      Object {
        "id": "abc",
        "text": "YouTube · 寻找健康人生",
        "type": "text",
      },
    ],
    "sessionId": 1497994017447,
  },
  "replies": Array [
    Object {
      "altText": "This message has already published on Cofacts, and will soon be fact-checked by volunteers.
Don’t trust the message just yet!",
      "contents": Object {
        "body": Object {
          "contents": Array [
            Object {
              "text": "This message has already published on Cofacts, and will soon be fact-checked by volunteers.
Don’t trust the message just yet!",
              "type": "text",
              "wrap": true,
            },
            Object {
              "action": Object {
                "label": "View reported message",
                "type": "uri",
                "uri": "https://dev.cofacts.tw/article/AVvY-yizyCdS-nWhuYWx",
              },
              "margin": "md",
              "type": "button",
            },
          ],
          "layout": "vertical",
          "type": "box",
        },
        "type": "bubble",
      },
      "type": "flex",
    },
    Object {
      "altText": "In the meantime, you can:",
      "contents": Object {
        "body": Object {
          "contents": Array [
            Object {
              "text": "In the meantime, you can:",
              "type": "text",
              "wrap": true,
            },
          ],
          "layout": "vertical",
          "type": "box",
        },
        "type": "bubble",
      },
      "type": "flex",
    },
    Object {
      "altText": "Provide more detail",
      "contents": Object {
        "contents": Array [
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "text": "It would help fact checkers a lot if you provide more detail :)",
                  "type": "text",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "type": "box",
            },
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "label": "Provide detail",
                    "type": "uri",
                    "uri": "https://liff.line.me/1563196602-X6mLdDkW?p=comment&articleId=AVvY-yizyCdS-nWhuYWx",
                  },
                  "color": "#00B172",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "vertical",
              "spacing": "sm",
              "type": "box",
            },
            "header": Object {
              "contents": Array [
                Object {
                  "color": "#00B172",
                  "size": "lg",
                  "text": "Provide more detail",
                  "type": "text",
                },
              ],
              "layout": "vertical",
              "paddingBottom": "none",
              "type": "box",
            },
            "type": "bubble",
          },
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "text": "We all get by with a little help from our friends 🌟 Share your question to friends, someone might be able to help!",
                  "type": "text",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "type": "box",
            },
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "label": "Share on LINE",
                    "type": "uri",
                    "uri": "line://msg/text/?Please%20help%20me%20verify%20if%20this%20is%20true%3A%20https%3A%2F%2Fdev.cofacts.tw%2Farticle%2FAVvY-yizyCdS-nWhuYWx",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
                Object {
                  "action": Object {
                    "label": "Share on Facebook",
                    "type": "uri",
                    "uri": "https://www.facebook.com/dialog/share?openExternalBrowser=1&app_id=719656818195367&display=popup&hashtag=%23ReportedToCofacts&href=https%3A%2F%2Fdev.cofacts.tw%2Farticle%2FAVvY-yizyCdS-nWhuYWx",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "vertical",
              "spacing": "sm",
              "type": "box",
            },
            "type": "bubble",
          },
        ],
        "type": "carousel",
      },
      "type": "flex",
    },
  ],
}
`;

exports[`should handle message matches only hyperlinks 1`] = `
Object {
  "context": Object {
    "msgs": Array [
      Object {
        "id": "abc",
        "text": "YouTube · 寻找健康人生",
        "type": "text",
      },
    ],
    "sessionId": 1497994017447,
  },
  "replies": Array [
    Object {
      "text": "🔍 There are some messages that looks similar to \\"YouTube · ⋯⋯\\" you have sent to me.",
      "type": "text",
    },
    Object {
      "text": "Internet rumors are often mutated and shared.
Please choose the version that looks the most similar👇",
      "type": "text",
    },
    Object {
      "altText": "Please choose the most similar message from the list.",
      "contents": Object {
        "contents": Array [
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "color": "#ff7b7b",
                  "size": "sm",
                  "text": "(Words found in the hyperlink)",
                  "type": "text",
                  "weight": "bold",
                },
                Object {
                  "contents": Array [
                    Object {
                      "text": "summary1 summary1 summary1 ",
                      "type": "span",
                    },
                    Object {
                      "color": "#ffb600",
                      "text": "YouTube",
                      "type": "span",
                      "weight": "bold",
                    },
                    Object {
                      "text": "
·
",
                      "type": "span",
                    },
                    Object {
                      "color": "#ffb600",
                      "text": "寻找健康人生",
                      "type": "span",
                      "weight": "bold",
                    },
                    Object {
                      "text": "
summary2 summary2 summary2 ",
                      "type": "span",
                    },
                    Object {
                      "color": "#ffb600",
                      "text": "YouTube",
                      "type": "span",
                      "weight": "bold",
                    },
                    Object {
                      "text": "
·
",
                      "type": "span",
                    },
                    Object {
                      "color": "#ffb600",
                      "text": "寻找健康人生",
                      "type": "span",
                      "weight": "bold",
                    },
                  ],
                  "flex": 0,
                  "gravity": "top",
                  "maxLines": 6,
                  "type": "text",
                  "weight": "regular",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "margin": "none",
              "spacing": "none",
              "type": "box",
            },
            "direction": "ltr",
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "data": "{\\"input\\":\\"AVvY-yizyCdS-nWhuYGB\\",\\"sessionId\\":1497994017447,\\"state\\":\\"CHOOSING_ARTICLE\\"}",
                    "displayText": "I choose “https://www.youtube.co...”",
                    "label": "Choose this one",
                    "type": "postback",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "horizontal",
              "type": "box",
            },
            "header": Object {
              "contents": Array [
                Object {
                  "flex": 0,
                  "text": "😐",
                  "type": "text",
                },
                Object {
                  "color": "#AAAAAA",
                  "gravity": "center",
                  "size": "sm",
                  "text": "Looks 12% similar",
                  "type": "text",
                  "weight": "bold",
                  "wrap": true,
                },
              ],
              "layout": "horizontal",
              "paddingBottom": "none",
              "spacing": "md",
              "type": "box",
            },
            "type": "bubble",
          },
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "color": "#ff7b7b",
                  "size": "sm",
                  "text": "(Words found in the hyperlink)",
                  "type": "text",
                  "weight": "bold",
                },
                Object {
                  "contents": Array [
                    Object {
                      "text": "title1 title1 title1 ",
                      "type": "span",
                    },
                    Object {
                      "color": "#ffb600",
                      "text": "YouTube",
                      "type": "span",
                      "weight": "bold",
                    },
                    Object {
                      "text": "
·
",
                      "type": "span",
                    },
                    Object {
                      "color": "#ffb600",
                      "text": "寻找健康人生",
                      "type": "span",
                      "weight": "bold",
                    },
                    Object {
                      "text": "
title2 title2 title2 ",
                      "type": "span",
                    },
                    Object {
                      "color": "#ffb600",
                      "text": "YouTube",
                      "type": "span",
                      "weight": "bold",
                    },
                    Object {
                      "text": "
·
",
                      "type": "span",
                    },
                    Object {
                      "color": "#ffb600",
                      "text": "寻找健康人生",
                      "type": "span",
                      "weight": "bold",
                    },
                  ],
                  "flex": 0,
                  "gravity": "top",
                  "maxLines": 6,
                  "type": "text",
                  "weight": "regular",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "margin": "none",
              "spacing": "none",
              "type": "box",
            },
            "direction": "ltr",
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "data": "{\\"input\\":\\"AVvY-yizyCdS-nWhuYGA\\",\\"sessionId\\":1497994017447,\\"state\\":\\"CHOOSING_ARTICLE\\"}",
                    "displayText": "I choose “http://www.chinatimes....”",
                    "label": "Choose this one",
                    "type": "postback",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "horizontal",
              "type": "box",
            },
            "header": Object {
              "contents": Array [
                Object {
                  "flex": 0,
                  "text": "😐",
                  "type": "text",
                },
                Object {
                  "color": "#AAAAAA",
                  "gravity": "center",
                  "size": "sm",
                  "text": "Looks 0% similar",
                  "type": "text",
                  "weight": "bold",
                  "wrap": true,
                },
              ],
              "layout": "horizontal",
              "paddingBottom": "none",
              "spacing": "md",
              "type": "box",
            },
            "type": "bubble",
          },
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "flex": 0,
                  "gravity": "top",
                  "maxLines": 5,
                  "text": "None of these messages matches mine :(",
                  "type": "text",
                  "weight": "regular",
                  "wrap": true,
                },
              ],
              "layout": "horizontal",
              "margin": "none",
              "spacing": "none",
              "type": "box",
            },
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "data": "{\\"input\\":\\"__NO_ARTICLE_FOUND__\\",\\"sessionId\\":1497994017447,\\"state\\":\\"CHOOSING_ARTICLE\\"}",
                    "displayText": "None of these messages matches mine :(",
                    "label": "Tell us more",
                    "type": "postback",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "horizontal",
              "type": "box",
            },
            "header": Object {
              "contents": Array [
                Object {
                  "color": "#AAAAAA",
                  "margin": "none",
                  "size": "sm",
                  "text": "😶",
                  "type": "text",
                  "weight": "bold",
                },
              ],
              "layout": "horizontal",
              "paddingBottom": "none",
              "type": "box",
            },
            "type": "bubble",
          },
        ],
        "type": "carousel",
      },
      "type": "flex",
    },
  ],
}
`;

exports[`should handle text not found 1`] = `
Object {
  "context": Object {
    "msgs": Array [
      Object {
        "id": "abc",
        "text": "YouTube · 寻找健康人生 驚！大批香蕉受到愛滋血污染！這種香蕉千萬不要吃！吃到可能會被 ...",
        "type": "text",
      },
    ],
    "sessionId": 1497994017447,
  },
  "replies": Array [
    Object {
      "altText": "Unfortunately, I currently don’t recognize “YouTube · ⋯⋯”, but I would still like to help.
May I ask you a quick question?",
      "contents": Object {
        "body": Object {
          "contents": Array [
            Object {
              "text": "Unfortunately, I currently don’t recognize “YouTube · ⋯⋯”, but I would still like to help.
May I ask you a quick question?",
              "type": "text",
              "wrap": true,
            },
          ],
          "layout": "vertical",
          "type": "box",
        },
        "type": "bubble",
      },
      "type": "flex",
    },
    Object {
      "altText": "Did you forward this message as a whole to me from the LINE app?",
      "contents": Object {
        "body": Object {
          "contents": Array [
            Object {
              "text": "Did you forward this message as a whole to me from the LINE app?",
              "type": "text",
              "wrap": true,
            },
          ],
          "layout": "vertical",
          "type": "box",
        },
        "footer": Object {
          "contents": Array [
            Object {
              "action": Object {
                "data": "{\\"input\\":\\"__POSTBACK_YES__\\",\\"sessionId\\":1497994017447,\\"state\\":\\"ASKING_ARTICLE_SOURCE\\"}",
                "displayText": "Yes, I forwarded it as a whole",
                "label": "Yes, I forwarded it as a whole",
                "type": "postback",
              },
              "color": "#333333",
              "style": "primary",
              "type": "button",
            },
            Object {
              "action": Object {
                "data": "{\\"input\\":\\"__POSTBACK_NO__\\",\\"sessionId\\":1497994017447,\\"state\\":\\"ASKING_ARTICLE_SOURCE\\"}",
                "displayText": "No, typed it myself",
                "label": "No, typed it myself",
                "type": "postback",
              },
              "color": "#333333",
              "style": "primary",
              "type": "button",
            },
          ],
          "layout": "vertical",
          "spacing": "sm",
          "type": "box",
        },
        "styles": Object {
          "body": Object {
            "separator": true,
          },
        },
        "type": "bubble",
      },
      "type": "flex",
    },
  ],
}
`;
